Fix cursor jumping around in markdown widget

--- a/cms/src/style.css
+++ b/cms/src/style.css
@@ -12,3 +12,9 @@
 [class*='FieldLabel-fieldLabel'] {
   text-transform: inherit !important;
 }
+
+/* This solved issue with cursor moving around
+   https://github.com/netlify/netlify-cms/issues/5092#issuecomment-1246525269 */
+[data-slate-editor] {
+  -webkit-user-modify: read-write !important;
+}
